# divnet-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  Makefile  README.md
book/: book.toml
book/book/: 404.html  citing_divnet.html  config_files.html  differences_from_original.html  divnet_rs.html  examples.html  examples_and_tutorial.html  index.html  input_output_files.html  installing.html  lee_data_walkthrough.html  logging.html  more_info.html  print.html  searchindex.js  searchindex.json  usage.html
book/src/: SUMMARY.md  citing_divnet.md  divnet_rs.md  examples.md  examples_and_tutorial.md  getting_started.md  input_output_files.md  installing.md  lee_data_walkthrough.md  more_info.md  usage.md
docs/: README.md  config_files.md  differences_from_original.md  examples.md  input_output_files.md  installing.md  logging.md
docs/lee_data/: 1_lee_phylum.R  2_lee_phylum_config.toml  3_import_divnet_rs_data.R  README.md  lee_phylum_divnet_rs_output.csv  lee_phylum_sample_data.csv
scripts/: README.md  convert__divnet_rs_to_rlang.R  convert__phyloseq_to_divnet_rs.R  divnet-parallel.sh  dn_separate.sh
src/: config.rs  conversions.rs  fit_aitchison.rs  io.rs  lib.rs  main.rs  multinomial.rs  mvrnorm.rs  opts.rs
src/matrix/: ewise.rs  mod.rs
test_files/lee/: config_lee.toml  config_lee_default.toml  config_lee_top_1000.toml  config_lee_top_50.toml  config_lee_top_500.toml  lee_count_table.csv  lee_top_1000_count_table.csv  lee_top_250_count_table.csv  lee_top_500_count_table.csv  lee_top_50_count_table.csv
test_files/lee_data_walkthrough/: README.md
(+16 files in other folders)
