[package]
name = "divnet-rs"
version = "0.3.0"
authors = ["Ryan M. Moore <moorer@udel.com>"]
edition = "2018"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[dependencies]
approx = "0.3.2"
blas = "0.20"
chrono = "0.4.11"
env_logger = "0.8.2"
lapack = "0.16"
log = "0.4.0"
openblas-src = { version = "0.9.0", default-features = false, features = ["system"] }
rand ="0.8.2"
rand_distr = "0.4.0"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.12"
toml = "0.5.6"
